# GSdjango

./: .env  .gitignore  Dockerfile  Pre.ppt  README.md  READMECN.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  report_cn.md  report_en.md  requirements.txt
GSsite/: README.md  __init__.py  asgi.py  celery_app.py  db_check.py  manage.py  settings.py  urls.py  views.py  wsgi.py
GSsite/GSsite/: settings.py  urls.py  wsgi.py
GSsite/Guardian-system-main/: about.html  index.html  settings.html
GSsite/Guardian-system-main/js/: data.js  dataShow.js  home.js  index.js  main.js
GSsite/health_monitor/: admin.py  api.py  api_urls.py  apps.py  consumers.py  forms.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
GSsite/health_monitor/migrations/: 0001_initial.py  0002_alter_userprofile_gender_alter_userprofile_id_number_and_more.py  0003_device_device_type.py
GSsite/health_monitor/tests/: test_blood_pressure_generator.py  test_heart_rate_generator.py
GSsite/nginx/: nginx.conf
GSsite/static/css/: index.css
GSsite/static/home/: dashboard.html  index2.html  index3.html  index4.html
GSsite/static/js/: dashboard.js  data.js  dataWorker.js  home.js  main.js
GSsite/templates/: base.html
GSsite/templates/health/: dashboard.html
GSsite/templates/home/: about.html  dashboard.html  emergency_contacts.html  index.html  orders.html  settings.html
GSsite/templates/registration/: base.html  (+2 more)
deployment-package/: README.txt
deployment-package/test/: .env.example  docker-compose.yml  nginx.conf
health_monitor/: urls.py  views.py
(+14 files in other folders)
